sfdx/force-app/main/default/objects/Opportunity/fields/Administration_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Administration_Priorities__c</fullName>
    <inlineHelpText>Select one or more priorities</inlineHelpText>
    <label>Administration Priorities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Rescue Plan</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Climate change</fullName>
            </value>
            <value>
                <fullName>Diversity, equity, accessibility, and inclusion</fullName>
            </value>
            <value>
                <fullName>HISP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>