sfdx/force-app/main/default/objects/Opportunity/fields/Agency_and_office_overview__c.field-meta.xml
<CustomField>
    <fullName>Agency_and_office_overview__c</fullName>
    <label>Agency and office overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>