sfdx/force-app/main/default/objects/Opportunity/fields/App_Description__c.field-meta.xml
<CustomField>
    <fullName>App_Description__c</fullName>
    <label>App Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>