sfdx/force-app/main/default/objects/Opportunity/fields/Application_URL__c.field-meta.xml
<CustomField>
    <fullName>Application_URL__c</fullName>
    <description>Originally created for TTS OTCRM - Login.gov Opportunities</description>
    <label>Application URL</label>
    <type>Url</type>
</CustomField>