sfdx/force-app/main/default/objects/Opportunity/fields/BD_Folder__c.field-meta.xml
<CustomField>
    <fullName>BD_Folder__c</fullName>
    <label>BD Folder</label>
    <type>Url</type>
</CustomField>