sfdx/force-app/main/default/objects/Opportunity/fields/Closed_Lost_reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_reason__c</fullName>
    <label>Closed Lost reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Pricing Objections</fullName>
            </value>
            <value>
                <fullName>Timeline Objections</fullName>
            </value>
            <value>
                <fullName>Scope Objections</fullName>
            </value>
            <value>
                <fullName>Reputation Concerns</fullName>
            </value>
            <value>
                <fullName>Communication Concerns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>