sfdx/force-app/main/default/objects/Opportunity/fields/Cost_estimator_worksheet__c.field-meta.xml
<CustomField>
    <fullName>Cost_estimator_worksheet__c</fullName>
    <label>Cost estimator worksheet</label>
    <type>Url</type>
</CustomField>