sfdx/force-app/main/default/objects/Opportunity/fields/Demographic_Served__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Served__c</fullName>
    <description>Originally created for TTS OTCRM - Login.gov Opportunities</description>
    <label>Demographic Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foreign Nationals</fullName>
            </value>
            <value>
                <fullName>General Population</fullName>
            </value>
            <value>
                <fullName>Gov’t Employees</fullName>
            </value>
            <value>
                <fullName>Non-USC</fullName>
            </value>
            <value>
                <fullName>Veterans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>