sfdx/force-app/main/default/objects/Opportunity/fields/Disqualified_reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_reason__c</fullName>
    <label>Disqualified reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Resources</fullName>
            </value>
            <value>
                <fullName>Insufficient timeline</fullName>
            </value>
            <value>
                <fullName>Insufficient Needs</fullName>
            </value>
            <value>
                <fullName>Insufficient Decision-making Authority</fullName>
            </value>
            <value>
                <fullName>Insufficient Interest</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t fit customer profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>