sfdx/force-app/main/default/objects/Opportunity/fields/End_User_Population__c.field-meta.xml
<CustomField>
    <fullName>End_User_Population__c</fullName>
    <description>Originally created for TTS OTCRM - Login.gov Opportunities</description>
    <label>Est. End-User Population (Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>