sfdx/force-app/main/default/objects/Opportunity/fields/Est_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Est_Go_Live__c</fullName>
    <description>Originally created for TTS OTCRM - Login.gov Opportunities</description>
    <label>Est. Go Live</label>
    <type>Date</type>
</CustomField>