sfdx/force-app/main/default/objects/Opportunity/fields/Est_Number_of_Auths__c.field-meta.xml
<CustomField>
    <fullName>Est_Number_of_Auths__c</fullName>
    <description>Originally created for TTS OTCRM - Login.gov Opportunities</description>
    <label>Est. # of Auths (Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>