sfdx/force-app/main/default/objects/Opportunity/fields/Final_of_data_scientists_analysts__c.field-meta.xml
<CustomField>
    <fullName>Final_of_data_scientists_analysts__c</fullName>
    <label>Final # of data scientists/analysts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>