sfdx/force-app/main/default/objects/Opportunity/fields/Final_of_designers__c.field-meta.xml
<CustomField>
    <fullName>Final_of_designers__c</fullName>
    <label>Final # of designers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>