sfdx/force-app/main/default/objects/Opportunity/fields/Funding_authority_cited_on_IAA__c.field-meta.xml
<CustomField>
    <fullName>Funding_authority_cited_on_IAA__c</fullName>
    <label>Funding authority cited on IAA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal Citizen Services Fund</fullName>
            </value>
            <value>
                <fullName>Other Agency Specific Fund noted in Required info form</fullName>
            </value>
            <value>
                <fullName>ARP Funded (American Rescue Plan)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>