sfdx/force-app/main/default/objects/Opportunity/fields/G_invoicing__c.field-meta.xml
<CustomField>
    <fullName>G_invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>G-invoicing?</label>
    <type>Checkbox</type>
</CustomField>