sfdx/force-app/main/default/objects/Opportunity/fields/Group_City__c.field-meta.xml
<CustomField>
    <fullName>Group_City__c</fullName>
    <label>Group City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>