sfdx/force-app/main/default/objects/Opportunity/fields/Group_Office__c.field-meta.xml
<CustomField>
    <fullName>Group_Office__c</fullName>
    <inlineHelpText>Enter name of government sub-agency or office requesting the opportunity</inlineHelpText>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>