sfdx/force-app/main/default/objects/Opportunity/fields/Group_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Group_Street_Address__c</fullName>
    <inlineHelpText>Enter street address of government sub-agency or office requesting the opportunity</inlineHelpText>
    <label>Group Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>