sfdx/force-app/main/default/objects/Opportunity/fields/Group_Website__c.field-meta.xml
<CustomField>
    <fullName>Group_Website__c</fullName>
    <description>Website of the requesting office.</description>
    <inlineHelpText>Enter website URL of government sub-agency or office requesting the opportunity</inlineHelpText>
    <label>Group Website</label>
    <type>Url</type>
</CustomField>