sfdx/force-app/main/default/objects/Opportunity/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <description>Originally created for TTS OTCRM - Login.gov Opportunities</description>
    <label>Last Activity</label>
    <type>Date</type>
</CustomField>