sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Alternative_Identity_Platforms__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Alternative_Identity_Platforms__c</fullName>
    <description>Alternatives the lead is considering instead of Login.gov.</description>
    <inlineHelpText>Alternatives the lead is considering instead of Login.gov.</inlineHelpText>
    <label>Alternative Identity Platforms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Homegrown (placeholder)</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Socure</fullName>
            </value>
            <value>
                <fullName>Google CiviForm</fullName>
            </value>
            <value>
                <fullName>ManTech</fullName>
            </value>
            <value>
                <fullName>Granicus</fullName>
            </value>
            <value>
                <fullName>Okta</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Oracle AM</fullName>
            </value>
            <value>
                <fullName>Ping/Forgerock</fullName>
            </value>
            <value>
                <fullName>Shibboleth</fullName>
            </value>
            <value>
                <fullName>Keycloak</fullName>
            </value>
            <value>
                <fullName>LexisNexis</fullName>
            </value>
            <value>
                <fullName>1Kosmos</fullName>
            </value>
            <value>
                <fullName>ID.me</fullName>
            </value>
            <value>
                <fullName>Exostar</fullName>
            </value>
            <value>
                <fullName>Jakobsen Id</fullName>
            </value>
            <value>
                <fullName>Mattr</fullName>
            </value>
            <value>
                <fullName>Idemia</fullName>
            </value>
            <value>
                <fullName>Microsoft Power Pages</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Experian</fullName>
            </value>
            <value>
                <fullName>Sign-In with Google</fullName>
            </value>
            <value>
                <fullName>Max.gov</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>