sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_App_Description__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_App_Description__c</fullName>
    <description>A couple sentences explaining the use case of an application or multiple applications, including name and URL.</description>
    <label>App Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>