sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Cost_Estimate_URL__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Cost_Estimate_URL__c</fullName>
    <description>URL of the opportunity&apos;s cost estimate or folder of cost estimates.</description>
    <label>Cost Estimate URL</label>
    <type>Url</type>
</CustomField>