sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Current_Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Current_Status_Summary__c</fullName>
    <description>Brief big-picture overview on who we are talking to and what they are saying/blocked on. Start entries with MM/DD/YY.</description>
    <inlineHelpText>Brief big-picture overview on who we are talking to and what they are saying/blocked on. Start entries with MM/DD/YY.</inlineHelpText>
    <label>Current Status Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>