sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Demographic_Served__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Demographic_Served__c</fullName>
    <description>Demographic of end users served by the application.</description>
    <inlineHelpText>Demographic of end users served by the application.</inlineHelpText>
    <label>Demographic Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal Employees</fullName>
            </value>
            <value>
                <fullName>Government Employees (Military)</fullName>
            </value>
            <value>
                <fullName>General Population</fullName>
            </value>
            <value>
                <fullName>Veterans</fullName>
            </value>
            <value>
                <fullName>Non-USC</fullName>
            </value>
            <value>
                <fullName>Gov&apos;t Employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>