sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Est_Annual_Auth_Only_Users__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Est_Annual_Auth_Only_Users__c</fullName>
    <inlineHelpText>Estimate of the number of auth-only users, who would not use IdV (fully ramped up).</inlineHelpText>
    <label>Est. Annual Auth-only Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>