sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Est_Annual_Idv_Users__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Est_Annual_Idv_Users__c</fullName>
    <inlineHelpText>Estimate of the number of annual IdV users, which would each cost $1 under the new pricing model (fully ramped up).</inlineHelpText>
    <label>Est. Annual IdV Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>