sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Est_Auth_Only_Avg_Active_Months__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Est_Auth_Only_Avg_Active_Months__c</fullName>
    <inlineHelpText>Estimate the number of months, on average, that auth-only users will be active.</inlineHelpText>
    <label>Est. Auth-only Avg Active Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>