sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Est_First_Year_Ramp__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Est_First_Year_Ramp__c</fullName>
    <description>Percentage of fully ramped revenue we should expect in the first year of the agreement. Defaults to 50%, but could be around 20% for a prolonged soft launch or 100% if it’s a hard cut over from an existing solution.</description>
    <label>Est. First Year Ramp %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>