sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Estimate_Rationale__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Estimate_Rationale__c</fullName>
    <inlineHelpText>Rough explanation of the math of how we got to the estimated annual auth-only and and IdV users, as well as First Year Ramp %. If it’s research and not partner provided, consider:</inlineHelpText>
    <label>Estimate rationale</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>