sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Estimate_Source__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Estimate_Source__c</fullName>
    <label>Estimate source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner-provided</fullName>
            </value>
            <value>
                <fullName>OM-researched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>