sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Estimated_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Estimated_Go_Live_Date__c</fullName>
    <description>Estimated Go-Live Date for Application</description>
    <inlineHelpText>Estimated Go-Live Date for Application</inlineHelpText>
    <label>Estimated Go-Live Date</label>
    <type>Date</type>
</CustomField>