sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Focus_Level__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Focus_Level__c</fullName>
    <description>How the OM team is focusing on this at the moment.</description>
    <inlineHelpText>How the OM team is focusing on this at the moment.</inlineHelpText>
    <label>Focus Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highest</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Developing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>