sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Level_of_Priority__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Level_of_Priority__c</fullName>
    <description>Originally created for TTS OTCRM - Login.gov Opportunities</description>
    <label>Level of Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>High Volume</fullName>
            </value>
            <value>
                <fullName>IdV Upgrade</fullName>
            </value>
            <value>
                <fullName>Leadership Escalation</fullName>
            </value>
            <value>
                <fullName>High</fullName>
                <isActive>false</isActive>
                <label>High</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <isActive>false</isActive>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <isActive>false</isActive>
                <label>Medium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>