sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Likely_Service_Level_Needed__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Likely_Service_Level_Needed__c</fullName>
    <inlineHelpText>Our best guess on the service level needed.</inlineHelpText>
    <label>Likely Service Level Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IdV, Auth-only</fullName>
            </value>
            <value>
                <fullName>Authentication Only</fullName>
            </value>
            <value>
                <fullName>Basic IdV</fullName>
            </value>
            <value>
                <fullName>Enhanced IdV (IAL2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>