sfdx/force-app/main/default/objects/Opportunity/fields/LDGCRM_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Market_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Market Segment</description>
    <inlineHelpText>This is automatically populated from the related Partner Account</inlineHelpText>
    <label>Market Segment</label>
    <referenceTo>LDGCRM_Market_Segment__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>